--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "express": "^4.10.6",
     "multer": "^0.1.6",
     "mysql": "^2.5.4",
-    "node-oauth2-server": "^2.2.2"
+    "node-oauth2-server": "^2.2.2",
+    "oauth2-server": "^2.3.0",
+    "simple-oauth2": "^0.2.1"
   },
   "devDependencies": {},
   "scripts": {
